Fixing alignment of elements.

--- a/frontend/frontend-app/src/App.css
+++ b/frontend/frontend-app/src/App.css
@@ -7,7 +7,7 @@ body {
     background-image: url("https://images.unsplash.com/photo-1454117096348-e4abbeba002c?ixlib=rb-4.0.3");
 }
 .container {
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
 }
 
@@ -17,31 +17,52 @@ body {
 }
 
 
-form, .button-container {
+form {
     margin-bottom: 20px;
     border: 1px solid #ddd;
     padding: 10px;
     border-radius: 5px;
     text-align: center;
     input-align: center;
+    align-items: center;
+}
+
+.button-container {
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  align-items: center;
+  display: center;
+  clear: both;
+  display: block;
 }
 
 input[type="text"] {
              display: block;
              margin : 0 auto;
+             padding: 8px;
         }
 
 input[type="password"] {
             display: block;
             margin : 0 auto;
+            padding: 8px;
         }
 
-label, select, input, textarea {
+select, textarea {
     display: inline-block;
     align-items: center;
     width: 45%;
     margin: 10px 260px;
     padding: 8px;
+}
+
+label {
+  display: block;
+  align-items: center;
+  text-align: center;
 }
 
 .select {
